# tui-blackjack

./: Cargo.toml
.devcontainer/: devcontainer.json
nvim/: init.lua  lazy-lock.json
nvim/lua/: chadrc.lua
nvim/lua/configs/: nvimtree.lua
nvim/lua/custom/plugins/: oil.lua
nvim/lua/plugins/: init.lua
nvim/plugin/: packer_compiled.lua
src/: app.rs  cards.rs  func.rs  funcs.rs  handler.rs  main-copy.rs  main.rs  ui.rs
tui-blackjack/: Cargo.toml
