[package]
name = "tui-blackjack"
version = "0.1.0"
authors = ["Vaspera <110002885+Vazpera@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
rand = "0.8.5"
ratatui = "0.28.1"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.39.3", features = ["full"] }
